--- a/src/app/genera-coches/genera-coches.component.scss
+++ b/src/app/genera-coches/genera-coches.component.scss
@@ -1,8 +1,9 @@
+//evitamos las imagenes de fondo en cards... no quedan bien
 .caja-fondo-coche{
-  background: url("/coche.png") no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
+  // background: url("/coche.png") no-repeat;
+  // background-position: center;
+  // background-size: cover;
+  // width: 100%;
 }
 
 .grid-layout{
