--- a/src/app/genera-numeros/genera-numeros.component.scss
+++ b/src/app/genera-numeros/genera-numeros.component.scss
@@ -1,17 +1,17 @@
 
 
+//evitamos las imagenes de fondo en cards... no quedan bien
 .caja-fondo-dados{
-  background: url("/fondo_dados.jpg") no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
+  // background: url("/fondo_dados.jpg") no-repeat;
+  // background-position: center;
+  // background-size: cover;
+  // width: 100%;
 }
-
 .caja-fondo-moneda{
-  background: url("/moneda.png") no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
+  // background: url("/moneda.png") no-repeat;
+  // background-position: center;
+  // background-size: cover;
+  // width: 100%;
 }
 
 .grid-layout{
