--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,21 +1,32 @@
+
+//Buscamos poner el panel de datos en un panel con marco y que degrade la imagen que ponemos de fondo
 .grid-container {
-  margin: 20px;
+  background: url("/fondo_dados.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
-
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
-
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-}
-
-.dashboard-card-content {
-  text-align: center;
+.box {
+  width: 500px;
+  height: 250px;
+  border: 2px solid #625d5d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  background: transparent;
+  min-width: 10%;
+  @media (min-width: 768px) {
+    margin-left: 20%;
+  }
+  @media (min-width: 1024px) {
+    margin-left: 30%;
+  }
 }
