--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -196,16 +196,20 @@
   transition: 0.5s;
   letter-spacing: 4px;
   overflow: hidden;
-  margin-right: 50px;
-  border-radius: 44%;
+  width: 250px;
+  height: 230px;
+  //margin-right: 50px;
+  border-radius: 12%;
   //background: #bb77fa;
+  margin-bottom: 100px;
 }
 
 .neon img {
   vertical-align: middle;
-  width: 80%;
-  height: 80%;
-  border-radius: 45%;
+  width: 200px;
+  height: 200px;
+  margin: 15px;
+  border-radius: 12%;
   //sombrear de negro la parte inferior para evitar cortes... no es necesario
   //mask-image: linear-gradient(black 80%, transparent);
   box-shadow: 0px 10px 10px #bb77fa;
