--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,11 +4,13 @@
   background: url("/fondo_dados.jpg") no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  //degradadmos imagen para que se integre mejor con el fondo
+  mask-image: radial-gradient(circle at center, black 30%, transparent);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
 }
 .box {
