Dotar a la aplicación de un sistema de pantalla de espera en una carga. De todas formas solo lo aplicamos de ejemplo a Variados -> Generar telefono. Tecnicamente en angular nuestro generar es suscribirse para esperar la devolución actualizando el DOM.... ¿para que querriamos pantalla de carga bloqueante?

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <app-menu>
   <router-outlet />
 </app-menu>
+
+<!-- Fijamos el div de la burbuja de carga con fondo bloqueantre para cuando se utilice
+  Afectara a toda la seccion que el menu ha cargado... no al menu
+ -->
+<div id="cargando" class="no-blub-overlay">
+  <div id="cargando-burbuja" class="no-blub">
+    <div class="blub-1"></div>
+    <div class="blub-2"></div>
+    <div class="blub-3"></div>
+  </div>
+</div>
