Animaciones: -Entrada de todas las pantallas, y menú

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,9 @@
 
 
-<div class="seccionCentrada">
-  <h1>Generadores de jpromocion</h1>
+<div class="seccionCentrada tracking-in-expand">
+  <h1 class="tracking-in-expand">Generadores de jpromocion</h1>
 
-  <h3>FrontEnd Angular</h3>
+  <h3 class="tracking-in-expand">FrontEnd Angular</h3>
   <div>
     <p>Versión v.{{ versionApp }}</p>
   </div>
@@ -24,7 +24,7 @@
   <br/>
   <br/>
 
-  <h3>API REST Backend</h3>
+  <h3 class="tracking-in-expand">API REST Backend</h3>
   <div>
     <p>Versión {{ versionApiRest }}</p>
   </div>
@@ -46,23 +46,23 @@
   <br/>
   <br/>
 
-  <h1>Autor</h1>
+  <h1 class="tracking-in-expand">Autor</h1>
 
-  <h2>Jose Javier Gálvez Gómez (jpromocion)</h2>
+  <h2 class="tracking-in-expand">Jose Javier Gálvez Gómez (jpromocion)</h2>
 
   <div class="neon">
     <!--
     <span></span><span></span>
     <span></span><span></span>
     -->
-    <img src="/zapp_blanco.jpg" alt="logo">
+    <img class="tracking-in-expand" src="/zapp_blanco.jpg" alt="logo">
   </div>
 
 
-  <h2>Información de contacto</h2>
+  <h2 class="tracking-in-expand">Información de contacto</h2>
 
   <div>
-    <h3>LinkedIn</h3>
+    <h3 class="tracking-in-expand">LinkedIn</h3>
     <div class="wrapperLogo">
       <div class="icon linkedin">
           <div class="tooltip">
@@ -79,7 +79,7 @@
     <br/>
     <br/>
 
-    <h3>GitHub</h3>
+    <h3 class="tracking-in-expand">GitHub</h3>
     <div class="wrapperLogo">
       <div class="icon github">
           <div class="tooltip">
@@ -96,7 +96,7 @@
     <br/>
     <br/>
 
-    <h3>Enviar email</h3>
+    <h3 class="tracking-in-expand">Enviar email</h3>
     <div>
       <div class="wrapperLogo">
         <div class="icon email">
@@ -121,7 +121,7 @@
 
 
   <!--Menu compartr social tipico... pero simplemente vamos a permitir abrir enlace igual que arriba pero desde este menu-->
-  <div class="card-social-container" style="margin-top: 10px;">
+  <div class="card-social-container tracking-in-expand" style="margin-top: 10px;">
     <div class="card-social-share-btn">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30px" height="30px" fill="currentColor"
             class="w-6 h-6">
