--- a/src/app/genera-fechas/genera-fechas.component.html
+++ b/src/app/genera-fechas/genera-fechas.component.html
@@ -1,6 +1,6 @@
-<h2>Fechas</h2>
+<h2 class="tracking-in-expand">Fechas</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
