--- a/src/app/genera-numeros/genera-numeros.component.html
+++ b/src/app/genera-numeros/genera-numeros.component.html
@@ -1,6 +1,6 @@
-<h2>Números</h2>
+<h2 class="tracking-in-expand">Números</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
