--- a/src/app/genera-perfiles/genera-perfiles.component.html
+++ b/src/app/genera-perfiles/genera-perfiles.component.html
@@ -1,6 +1,6 @@
-<h2>Perfil</h2>
+<h2 class="tracking-in-expand">Perfil</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
   <div class="grid-layout">
 
     <div class="caja c0">
