--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 
-<div class="grid-container">
+<div class="grid-container kenburns-top-right">
 
 
-  <div class="box">
+  <div class="box rotate-center">
 
     <h2>Principal</h2>
       <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
