--- a/src/app/genera-barras/genera-barras.component.html
+++ b/src/app/genera-barras/genera-barras.component.html
@@ -1,6 +1,6 @@
-<h2>QR y Códigos de barras</h2>
+<h2 class="tracking-in-expand">QR y Códigos de barras</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
