--- a/src/app/genera-coches/genera-coches.component.html
+++ b/src/app/genera-coches/genera-coches.component.html
@@ -1,6 +1,6 @@
-<h2>Vehículos</h2>
+<h2 class="tracking-in-expand">Vehículos</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
