--- a/src/app/genera-colores/genera-colores.component.html
+++ b/src/app/genera-colores/genera-colores.component.html
@@ -1,6 +1,6 @@
-<h2>Colores</h2>
+<h2 class="tracking-in-expand">Colores</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
 
   <div class="grid-layout">
