--- a/src/app/genera-cuentas/genera-cuentas.component.html
+++ b/src/app/genera-cuentas/genera-cuentas.component.html
@@ -1,6 +1,6 @@
-<h2>Elementos bancarios</h2>
+<h2 class="tracking-in-expand">Elementos bancarios</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
 
   <div class="grid-layout">
