--- a/src/app/genera-documentos/genera-documentos.component.html
+++ b/src/app/genera-documentos/genera-documentos.component.html
@@ -1,6 +1,6 @@
-<h2>Documentos</h2>
+<h2 class="tracking-in-expand">Documentos</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
