--- a/src/app/genera-localizacion/genera-localizacion.component.html
+++ b/src/app/genera-localizacion/genera-localizacion.component.html
@@ -1,6 +1,6 @@
-<h2>Localización</h2>
+<h2 class="tracking-in-expand">Localización</h2>
 
-<div class="panelFluidoSegundoNivel">
+<div class="panelFluidoSegundoNivel bounce-in-bottom">
 
   <div class="grid-layout">
 
