--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -8,7 +8,7 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar>Menú</mat-toolbar>
-    <mat-nav-list>
+    <mat-nav-list class="flip-in-hor-bottom">
       @for (item of rootRoutes; track $index) {
       <a
         mat-list-item
@@ -17,11 +17,13 @@
         routerLinkActive
         [activated]="link.isActive"
       >
-      <!--NOTA: fijamos la clase tambien con una funcion, dado que buscamos rotar el icono solo del menu seleccionado
-        cambiado la clase asociada
-      -->
-      <mat-icon class="{{ getIconClass(item.path ?? '') }}">{{ getIconoRuta(item.path ?? '')}}</mat-icon>
-        {{ item.title }}
+        <!--NOTA: fijamos la clase tambien con una funcion, dado que buscamos rotar el icono solo del menu seleccionado
+          cambiado la clase asociada
+        -->
+        <div style="display: flex; align-items: center;">
+          <mat-icon class="{{ getIconClass(item.path ?? '') }}">{{ getIconoRuta(item.path ?? '')}}</mat-icon>
+          <span class="resaltarMenu" style="margin-left: 2px;">{{ item.title }}</span>
+        </div>
       </a>
       }
     </mat-nav-list>
