Repaso visual: un menu en lila-rosa. Revisión sombreados lila-rosaceo. Dashboard más acorde con el tema. Titulos en rosa.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 
-<div class="grid-container kenburns-top-right">
+<div class="grid-container">
 
 
-  <div class="box rotate-center">
+  <div class="box slide-in-elliptic-top-fwd">
 
     <h2>Principal</h2>
       <!--EL item para rellenar el api-key con el que funcionaran todas las invocaciones-->
