--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,5 +1,5 @@
 
-
+@use '../../styles' as stylesGeneral;
 
 /** wrapperLogo: encerramos una estructura donde configuremos un tooltip personalizado por css */
 //wrapperLogo: encerramos una estructura donde configuremos un tooltip personalizado por css
@@ -32,7 +32,7 @@
     border-radius: 50%;
     position: relative;
     z-index: 2;
-    box-shadow: 0px 10px 10px #bb77fa;
+    box-shadow: 0px 10px 10px stylesGeneral.$color-lila-base-menu;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
@@ -68,7 +68,7 @@
     border-radius: 25px;
     opacity: 0;
     pointer-events: none;
-    box-shadow: 0px 10px 10px #bb77fa;
+    box-shadow: 0px 10px 10px stylesGeneral.$color-lila-base-menu;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
@@ -212,7 +212,7 @@
   border-radius: 12%;
   //sombrear de negro la parte inferior para evitar cortes... no es necesario
   //mask-image: linear-gradient(black 80%, transparent);
-  box-shadow: 0px 10px 10px #bb77fa;
+  box-shadow: 0px 10px 10px stylesGeneral.$color-lila-base-menu;
   //hacemos que la imagen este en gris... hasta que nos situemos sobre ella
   filter: grayscale(100%);
 }
@@ -222,13 +222,13 @@
 }
 
 .neon:hover {
-  background: #bb77fa;
+  background: stylesGeneral.$color-lila-base-menu;
   color: #050801;
   //fuerza una sombra en este color progresiva apagandose conforme se aleja... un efecto neon chulo
-  box-shadow: 0 0 5px #bb77fa,
-      0 0 25px #bb77fa,
-      0 0 50px #bb77fa,
-      0 0 200px #bb77fa;
+  box-shadow: 0 0 5px stylesGeneral.$color-lila-base-menu,
+      0 0 25px stylesGeneral.$color-lila-base-menu,
+      0 0 50px stylesGeneral.$color-lila-base-menu,
+      0 0 200px stylesGeneral.$color-lila-base-menu;
   //crea un reflejo en la parte inferior
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 }
@@ -361,7 +361,7 @@ a span:nth-child(4) {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0px 10px 10px #bb77fa;
+  box-shadow: 0px 10px 10px stylesGeneral.$color-lila-base-menu;
 }
 
 
@@ -388,10 +388,10 @@ a span:nth-child(4) {
   outline: none;
   border: none;
   //background: white;
-  background: rgb(218, 218, 218);
+  background: stylesGeneral.$color-lila-texto-menu;
   border-radius: 90px 5px 5px 5px;
   //box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  box-shadow: #bb77fa 0px 2px 5px -1px, #bb77fa 0px 1px 3px -1px;
+  box-shadow: stylesGeneral.$color-lila-base-menu 0px 2px 5px -1px, stylesGeneral.$color-lila-base-menu 0px 1px 3px -1px;
   transition: 300ms cubic-bezier(0.73, -0.18, 0.02, 1.46);
 }
 
@@ -412,10 +412,10 @@ a span:nth-child(4) {
   outline: none;
   border: none;
   //background: white;
-  background: rgb(218, 218, 218);
+  background: stylesGeneral.$color-lila-texto-menu;
   border-radius: 5px 90px 5px 5px;
   //box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  box-shadow: #bb77fa 0px 2px 5px -1px, #bb77fa 0px 1px 3px -1px;
+  box-shadow: stylesGeneral.$color-lila-base-menu 0px 2px 5px -1px, stylesGeneral.$color-lila-base-menu 0px 1px 3px -1px;
   transition: 300ms cubic-bezier(0.76, -0.19, 0.15, 1.17);
 }
 
@@ -434,10 +434,10 @@ a span:nth-child(4) {
   outline: none;
   border: none;
   //background: white;
-  background: rgb(218, 218, 218);
+  background: stylesGeneral.$color-lila-texto-menu;
   border-radius: 5px 5px 5px 90px;
   //box-shadow:rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  box-shadow: #bb77fa 0px 2px 5px -1px, #bb77fa 0px 1px 3px -1px;
+  box-shadow: stylesGeneral.$color-lila-base-menu 0px 2px 5px -1px, stylesGeneral.$color-lila-base-menu 0px 1px 3px -1px;
   transition: 300ms cubic-bezier(0.72,-0.26, 0.02, 1.46);
 }
 
@@ -459,10 +459,10 @@ a span:nth-child(4) {
   outline: none;
   border: none;
   //background: white;
-  background: rgb(218, 218, 218);
+  background: stylesGeneral.$color-lila-texto-menu;
   border-radius: 5px 5px 90px 5px;
   //box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  box-shadow: #bb77fa 0px 2px 5px -1px, #bb77fa 0px 1px 3px -1px;
+  box-shadow: stylesGeneral.$color-lila-base-menu 0px 2px 5px -1px, stylesGeneral.$color-lila-base-menu 0px 1px 3px -1px;
   transition: 300ms cubic-bezier(1, -0.31, 0.02, 1.46);
 
 }
