--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,12 @@
 //tema fijado en variable para recuperar cosas
 $theme: mat.define-theme();
 
+//definir el color #810081 como una variable para utilizar
+$color-lila-base-menu: #810081;
+$color-lila-activo-menu: #8e118d;
+$color-lila-texto-menu: #ffabf3;
+
+
 html, body { height: 100%; }
 body {
   margin: 0;
@@ -25,7 +31,7 @@ html, body, app-root, .app-frame {
 }
 
 h1 {
-  color: #eedee7;
+  color: $color-lila-texto-menu;
   font-size: 2em;
   //text-align: center;
   //margin-top: 20px;
@@ -35,13 +41,25 @@ h1 {
 }
 
 h2 {
-  color: #eedee7;
+  color: $color-lila-texto-menu;
   font-size: 1.5em;
 }
 
 h3 {
-  color: #eedee7;
+  color: $color-lila-texto-menu;
   font-size: 1em;
+}
+
+
+//Clases para colorear el menu lateral de un color mas chulo, como el app-nav que utiliza angular material
+.fondoMenu{
+  background: $color-lila-base-menu !important;
+}
+.textoMenu{
+  color: $color-lila-texto-menu !important;
+}
+.opcionmenuactiva {
+  background-color: $color-lila-activo-menu !important;
 }
 
 
@@ -132,7 +150,7 @@ h3 {
 
 /** El color de los enlaces es horrible en azul */
 a {
-  color: #C29FFA;
+  color: $color-lila-texto-menu;
 }
 
 /* Al no estar bootstrap definimos los calores de los mensajers de la barra de mensajes de forma particular */
@@ -323,9 +341,13 @@ mat-header-cell {
 //le vanmos a aplicar un sombreado suave a todos los card de la aplicacion
 .mat-mdc-card{
   //#ffabf3
-  box-shadow: 1px 1px 3px #5f00c0 !important; //Si se quisiera tambien por arriba er izquierda, -10px -10px 20px yellow;
+  box-shadow: 2px 2px 4px $color-lila-base-menu !important; //Si se quisiera tambien por arriba er izquierda, -10px -10px 20px yellow;
 }
 
+//Al titulo cabecera de las tarjetas le ponemos tambien el rosita
+.mat-mdc-card-header{
+  color: $color-lila-texto-menu;
+}
 
 
 
@@ -519,3 +541,21 @@ mat-header-cell {
     opacity: 1;
   }
 }
+
+//apareciendo desde el centro
+.slide-in-elliptic-top-fwd {
+	animation: slide-in-elliptic-top-fwd 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@keyframes slide-in-elliptic-top-fwd {
+  0% {
+    transform: translateY(-600px) rotateX(-30deg) scale(0);
+    transform-origin: 50% 100%;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) rotateX(0) scale(1);
+    transform-origin: 50% 1400px;
+    opacity: 1;
+  }
+}
+
